#89 | [API] Deprecated API Usages - gnu.trove.THashSet